Update translation.json (POEditor.com)

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -1,7 +1,7 @@
 {
-    "menuHome": "",
-    "menuRestCall": "",
-    "menuAbout": "",
+    "menuHome": "1",
+    "menuRestCall": "3",
+    "menuAbout": "2",
     "titleHome": "",
     "titleRestCall": "",
     "titleAbout": "",
