--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,6 +1,6 @@
 {
-    "menuHome": "test",
-    "menuRestCall": "",
+    "menuHome": "one",
+    "menuRestCall": "two",
     "menuAbout": "",
     "titleHome": "",
     "titleRestCall": "",
