--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,1 +1,12 @@
-{}
+{
+    "menuHome": "one",
+    "menuRestCall": "two",
+    "menuAbout": "",
+    "titleHome": "",
+    "titleRestCall": "",
+    "titleAbout": "",
+    "withWordBig": "",
+    "MoreWordBig": "",
+    "MoreInfo": "",
+    "username": ""
+}
