Update translation.json (POEditor.com)

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -1,12 +1,12 @@
 {
-    "menuHome": "1",
-    "menuRestCall": "4",
-    "menuAbout": "2",
-    "titleHome": "",
-    "titleRestCall": "",
-    "titleAbout": "",
-    "withWordBig": "",
-    "MoreWordBig": "",
-    "MoreInfo": "",
+    "menuHome": "234341",
+    "menuRestCall": "23424",
+    "menuAbout": "3242342",
+    "titleHome": "34243",
+    "titleRestCall": "2342344",
+    "titleAbout": "title About",
+    "withWordBig": "5",
+    "MoreWordBig": "23424",
+    "MoreInfo": "ola",
     "username": "hook test"
 }
