--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -8,5 +8,6 @@
     "withWordBig": "5",
     "MoreWordBig": "23424",
     "MoreInfo": "ola",
-    "username": "hook test"
+    "username": "hook test",
+    "test": "bla"
 }
