--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -9,5 +9,7 @@
     "MoreWordBig": "23424",
     "MoreInfo": "ola",
     "username": "hook test",
-    "test": "bla"
+    "test": "bla",
+ "test2": "bla",
+ "test2": ""
 }
