--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -8,5 +8,8 @@
     "withWordBig": "",
     "MoreWordBig": "",
     "MoreInfo": "",
-    "username": "sync"
+    "username": "sync",
+    "test": "bla",
+ "test2": "bla",
+ "test2": ""
 }
