Update translation.json (POEditor.com)

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -10,7 +10,6 @@
     "MoreInfo": "ola",
     "username": "hook test",
     "test": "bla",
- "test2": "bla",
- "test3": "",
-    "test4": "yoh"
+    "test2": "bla",
+    "test4723": "jhwbewe"
 }
